--- a/src/components/MiniCatalog/MiniCatalog.module.scss
+++ b/src/components/MiniCatalog/MiniCatalog.module.scss
@@ -9,14 +9,40 @@
 
 	&__main-list {
 		display: none;
+
+		margin-top: 31px;
+
+		flex-direction: column;
+		gap: 20px;
+
+		&__item {
+			height: 20px;
+
+			display: flex;
+			align-items: center;
+			gap: 9px;
+			text-transform: uppercase;
+
+			@include typography(Roboto, 400, 14px, 100%, 0%, _);
+		}
 	}
 
 	&__main-title {
-		@include typography(Oswald, 400, 18px, 68px, 0%, _);
+		@include typography(Oswald, 400, 18px, 22px, 0%, _);
+		margin-top: 16px;
+		margin-bottom: 16px;
 	}
 
 	&__aside {
 		border: none;
+	}
+
+	&__list-wrap {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 50px;
+		padding-bottom: 39px;
 	}
 
 	&__list {
@@ -51,9 +77,38 @@
 
 		&-price {
 			@include typography(Oswald, 500, 14px, 100%, 0%, _);
+			margin-top: 18px;
 			text-transform: uppercase;
 			color: $main-text-color;
+
+			display: flex;
+			align-items: center;
+
+			&-discount {
+				color: $accent-color;
+			}
+
+			&-old {
+				@include typography(Oswald, 400, 8px, 100%, 0px, _);
+
+				color: $secondary-text-color;
+				text-decoration: line-through;
+
+				margin-left: 0.5em;
+			}
 		}
+	}
+
+	&__load-button {
+		width: 100%;
+		height: 35px;
+
+		border: 1px solid $divider-color;
+		background-color: transparent;
+		color: $secondary-text-color;
+
+		@include typography(Oswald, 500, 14px, 100%, 0.5px, center);
+		text-transform: uppercase;
 	}
 }
 
@@ -87,6 +142,12 @@
 			display: flex;
 		}
 
+		&__main-title {
+			@include typography(Oswald, 400, 24px, 22px, 0%, _);
+			margin-top: 18px;
+			margin-bottom: 18px;
+		}
+
 		&__wrap {
 			margin: 0;
 			max-width: 100%;
@@ -107,7 +168,16 @@
 
 			&-price {
 				@include typography(Oswald, 500, 22px, 100%, 0%, _);
+
+				&-old {
+					@include typography(Oswald, 400, 14px, 100%, 0px, _);
+				}
 			}
+		}
+
+		&__load-button {
+			width: 140px;
+			height: 50px;
 		}
 
 		&__title {
@@ -124,7 +194,7 @@
 		}
 
 		&__main-list {
-			display: block;
+			display: flex;
 		}
 
 		&__main-wrap {
@@ -132,7 +202,7 @@
 		}
 
 		&__main-title {
-			@include typography(Oswald, 400, 24px, 68px, 0%, _);
+			margin-bottom: 0;
 		}
 
 		&__aside {
