--- a/src/sass/utils/variables.scss
+++ b/src/sass/utils/variables.scss
@@ -1,16 +1,16 @@
 $functional-bg-color: #e6f1fa;
-$functional-bg-hover-color: #D0E4F2;
+$functional-bg-hover-color: #d0e4f2;
 $accent-color: #eb5757;
 $main-text-color: #000000;
-$inactive-color: #3F3F3F; 
+$inactive-color: #3f3f3f;
 $bg-color: #ffffff;
 $contrast-text-color: #ffffff;
 $secondary-text-color: #828282;
 $subtitle-text-color: #bdbdbd;
-$form-bg-color: #F0F2F2;
-$main-hover-color: #F0F2F2;
-$divider-color: #C4C4C4;
-$outline-color: #C4C4C4;
-$link-color: #0F6DB1;
-$info-bg-color: #F8F9FB;
+$form-bg-color: #f0f2f2;
+$main-hover-color: #f0f2f2;
+$divider-color: #c4c4c4;
+$outline-color: #c4c4c4;
+$link-color: #0f6db1;
+$info-bg-color: #f8f9fb;
 $st-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
