--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -3,10 +3,13 @@
   position: relative;
   width: 100%;
   height: 800px;
+  @media screen and (max-width: 1200px) {
+    height: 700px;
+  }
 
   .slideTrack {
     display: flex;
-    transition: transform 0.7s ease-in-out;
+    transition: transform 0.8s ease-in-out;
     height: 100%;
   }
 
@@ -23,11 +26,22 @@
     width: 100%;
     height: 100%;
     padding: 204px 0px 0px 234px;
+    @media screen and (max-width: 1200px) {
+      display: flex;
+      padding: 0;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   .content {
     position: relative;
     max-width: 500px;
+    @media screen and (max-width: 1200px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
   }
 
   .heroLine {
@@ -37,6 +51,10 @@
     width: 497px;
     height: 100px;
     fill: #000;
+    @media screen and (max-width: 768px) {
+      top: -11px;
+      right: -31px;
+    }
   }
 
   .heroText {
@@ -48,6 +66,9 @@
     font-weight: 600;
     line-height: 96px;
     text-transform: uppercase;
+    @media screen and (max-width: 768px) {
+      font-size: 66px;
+    }
   }
 
   .highlight {
@@ -58,6 +79,9 @@
     line-height: 96px;
     font-family: "Oswald";
     text-transform: uppercase;
+    @media screen and (max-width: 768px) {
+      font-size: 66px;
+    }
   }
 
   .shopNowBtn {
