--- a/src/pages/CatalogPage/Filtration/Filtration.scss
+++ b/src/pages/CatalogPage/Filtration/Filtration.scss
@@ -63,7 +63,6 @@ main.container {
     &.active {
         display: flex;
         margin-bottom: 20px;
-        position: absolute;
     }
 
     padding-right: 18px;
@@ -81,10 +80,7 @@ main.container {
         position: static;
         top: 0;
         z-index: 0;
-        padding-right: 0;
-        padding-left: 0;
-        padding-bottom: 0;
-        margin-bottom: 0;
+        padding: 15px;
 
         &.active {
             display: flex;
@@ -129,16 +125,17 @@ main.container {
 
 // .catalog-filtration__wrap {}
 
-.catalog-filtration{
+.catalog-filtration {
     display: flex;
     flex-direction: column;
     position: relative;
     justify-content: center;
     align-items: center;
+
     @media screen and (min-width: 768px) {
         align-items: start;
         justify-content: start;
-        
+
     }
 }
 
@@ -273,7 +270,7 @@ main.container {
 }
 
 
-.catalog-filtration__filtr-name-close{
+.catalog-filtration__filtr-name-close {
     cursor: pointer;
     font-size: 50px;
     font-weight: 400;
@@ -286,6 +283,7 @@ main.container {
         color: $main-text-color;
     }
 }
+
 .catalog-filtration__filtr-name-open {
     cursor: pointer;
     font-size: 40px;
@@ -513,8 +511,10 @@ input[type="range"] {
     margin-bottom: 20px;
 }
 
-.selected-filters{
+.selected-filters {
     cursor: pointer;
+}
+
 .catalog-filtration__filtr-close-text {
     text-transform: uppercase;
     @include typography(Oswald, 400, 14px, 48px, 0, left);
@@ -532,7 +532,7 @@ input[type="range"] {
 }
 
 .catalog-filtration__filtr-close-wrap {
-    height:100%;
+    height: 100%;
     display: flex;
     align-items: center;
     gap: 2px;
@@ -544,13 +544,15 @@ input[type="range"] {
     align-items: center;
     justify-content: space-between;
 }
-.catalog-filtration__wrap{
+
+.catalog-filtration__wrap {
     border: 1px solid $main-text-color;
     padding: 15px;
 }
-.catalog-filtration__title-wrap{
-display: flex;
-justify-content: space-between;
+
+.catalog-filtration__title-wrap {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
 }
