remade filtration and catalog styles

--- a/src/pages/CatalogPage/Sorting/Sorting.scss
+++ b/src/pages/CatalogPage/Sorting/Sorting.scss
@@ -1,9 +1,15 @@
 @import '../../../sass/utils/mixins.scss';
 @import '../../../sass/utils/variables.scss';
 .sorting__form {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     display: flex;
     gap: 20px;
+    justify-content: end;
+    align-items: center;
+    padding-right: 18px;
+    @media screen and (min-width: 1454px) {
+        width: 1454px;
+    }
 }
 
 .sorting__select-sortBy,
