--- a/src/pages/CatalogPage/Catalog/Catalog.module.scss
+++ b/src/pages/CatalogPage/Catalog/Catalog.module.scss
@@ -1,11 +1,19 @@
 @import "../../../sass/utils/variables.scss";
 
+.catalog{
+  @media screen  and (min-width : 1454px){
+    width: 1454px;
+    margin: 0 auto;
+    
+  }
+}
+
 .catalog__list {
   display: flex;
   flex-wrap: wrap;
   row-gap: 18px;
   column-gap: 14px;
-  padding: 0 14px;
+  // padding: 0 14px;
   width: 320px;
   justify-content: center;
   @media screen and (min-width: 768px) {
@@ -23,11 +31,11 @@
   }
 }
 .catalog__img {
-  width: 139px !important;
-  height: 182px !important;
+  width: 139px ;
+  height: 182px;
   @media screen and (min-width: 768px) {
-    width: 344px !important;
-    height: 450px !important;
+    width: 344px ;
+    height: 450px;
   }
 }
 .catalog__top {
