--- a/src/pages/Cabinet/DashboardPage/AddNewAddress/AddNewAddress.module.scss
+++ b/src/pages/Cabinet/DashboardPage/AddNewAddress/AddNewAddress.module.scss
@@ -108,6 +108,7 @@
     }
 
     &__label {
+
         @media screen and (min-width:1200px) {
             display: flex;
             justify-content: space-between;
@@ -227,5 +228,20 @@
             background-color: $main-text-color;
         }
 
+    }
+
+    &__error {
+        color: $accent-color;
+        font-family: "Roboto", sans-serif;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.66667;
+        position: absolute;
+        bottom: -16px;
+        left: 0;
+    }
+
+    &__errordiv {
+        position: relative;
     }
 }
