--- a/src/pages/CatalogPage/Banner/Banner.scss
+++ b/src/pages/CatalogPage/Banner/Banner.scss
@@ -1,6 +1,7 @@
 @import '../../../sass/utils/variables.scss';
 
 .banner {
+  width: 100%;
   background-color: $main-text-color;
   color: $bg-color;
   font-family: "Roboto", sans-serif;
