--- a/src/pages/HomePage/Blog/Blog.module.scss
+++ b/src/pages/HomePage/Blog/Blog.module.scss
@@ -1,180 +1,92 @@
 .blog {
-    max-width: 100%;
+    padding: 60px 0;
     background: #F8F9FB;
-
+    font-family: 'Oswald', sans-serif;
 
     &__container {
-        width: 1920px;
-        padding: 0 15px;
+        width: 100%;
+        max-width: 100%;
         margin: 0 auto;
-        outline: 1px solid red;
+        padding: 0 30px;
     }
-
-    @media screen and (max-width: 1200px) {
-        .blog__container {
-            width: 1200px;
-        }
-    }
-
-    @media screen and (max-width: 768px) {
-        .blog__container {
-            width: 768px;
-        }
-    }
-
-    @media screen and (max-width: 480px) {
-        .blog__container {
-            width: 480px;
-        }
-    }
-
-    @media screen and (max-width: 320px) {
-        .blog__container {
-            width: 320px;
-        }
-    }
-
-
-
-
-
-
-
-
 
     &__title {
         color: #000;
-        font-family: Oswald;
-        font-size: 24px;
-        font-style: normal;
+        font-size: clamp(32px, 5vw, 48px);
         font-weight: 400;
-        line-height: 68px;
+        line-height: 1.2;
+        margin-bottom: 40px;
+        text-transform: uppercase;
+
+        @media (max-width: 1024px) {
+            text-align: center;
+        }
     }
 
     &__list {
-        display: flex;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 20px;
         padding-bottom: 40px;
+
+        @media (max-width: 1200px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @media (max-width: 650px) {
+            grid-template-columns: 1fr;
+        }
     }
 
-
     &__item {
-        width: 434px;
-        height: 420px;
-        padding: 24px;
-        margin-right: 30px;
-        flex-shrink: 0;
         background: #FFF;
-        position: relative;
+        padding: 24px;
+        display: flex;
+        flex-direction: column;
+        min-height: 450px;
+        transition: all 0.3s ease;
+
+        &:hover {
+            box-shadow: 0 15px 40px rgba(0,0,0,0.08);
+        }
     }
 
     &__title_item {
         color: #BDBDBD;
-        font-family: Oswald;
-        font-size: 18px;
+        font-size: 14px;
         font-weight: 600;
         text-transform: uppercase;
-        margin-bottom: 21px;
+        margin-bottom: 15px;
     }
 
     &__subtitle_item {
         color: #000;
-        font-family: Oswald;
-        font-size: 26px;
-        font-style: normal;
+        font-size: 22px;
         font-weight: 400;
-        line-height: normal;
-        margin-bottom: 32px;
+        line-height: 1.3;
+        margin-bottom: 20px;
     }
 
     &__info_item {
-        color: #000;
-        font-family: "Roboto Light";
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 24px;
-        letter-spacing: 0.16px;
+        color: #4F4F4F;
+        font-family: "Roboto", sans-serif;
+        font-size: 15px;
+        font-weight: 300;
+        line-height: 1.6;
+        margin-bottom: 40px;
     }
 
     &__line_item {
         height: 3px;
-        width: 90%;
+        width: 100%;
         background: #000;
-        position: absolute;
-        bottom: 40px;
+        margin-top: auto;
+        margin-bottom: 15px;
     }
 
     &__date_item {
-        color: #4F4F4F;
-        font-family: Oswald;
+        color: #828282;
         font-size: 13px;
-        font-style: normal;
-        font-weight: 300;
-        line-height: 37px;
-        position: absolute;
-        bottom: 5px;
-    }
-}
-
-@media screen and (max-width: 1200px) {
-    .blog {
-        width: 1200px;
-
-        &__title {
-            text-align: center;
-        }
-
-        &__list {
-            display: grid;
-            grid-template-columns: repeat(2, 430px);
-            gap: 30px;
-            justify-content: center;
-        }
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .blog {
-        width: 768px;
-
-        &__list {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        &__item {
-            margin: 0;
-        }
-    }
-}
-
-
-@media screen and (max-width: 480px) {
-    .blog {
-        width: 480px;
-
-        &__list {
-            width: 100%;
-        }
-
-        &__item {
-            width: 100%;
-        }
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .blog {
-        width: 320px;
-
-        &__list {
-            width: 100%;
-        }
-
-        &__item {
-            width: 100%;
-            height: 500px;
-        }
+        text-transform: uppercase;
     }
 }
