--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,15 +1,20 @@
+@use "../../sass/utils/mixins.scss" as *;
+
 .slider {
   overflow: hidden;
   position: relative;
   width: 100%;
-  height: 800px;
-  @media screen and (max-width: 1200px) {
+  height: 492px;
+  @include mob-l {
     height: 700px;
+  }
+  @include desk-s {
+    height: 800px;
   }
 
   .slideTrack {
     display: flex;
-    transition: transform 0.8s ease-in-out;
+    transition: all 1s ease;
     height: 100%;
   }
 
@@ -20,109 +25,212 @@
     flex-shrink: 0;
     background-size: cover;
     background-position: center;
+    background-image: var(--bg-mobile);
+    @include tab {
+      background-image: var(--bg-desktop);
+    }
   }
 
   .overlay {
     width: 100%;
     height: 100%;
-    padding: 204px 0px 0px 234px;
-    @media screen and (max-width: 1200px) {
+    @include flex($align-items: center, $justify-content: center);
+    padding: 256px 15px 76px;
+    text-align: center;
+    @include tab {
       display: flex;
-      padding: 0;
-      align-items: center;
-      justify-content: center;
+      align-items: left;
+      padding: 150px 0;
+    }
+
+    @include desk-s {
+      display: block;
+      text-align: left;
+      padding: 204px 0px 204px 234px;
     }
   }
 
-  .content {
+  .sliderContent {
     position: relative;
     max-width: 500px;
-    @media screen and (max-width: 1200px) {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+    @include flex($flex-wrap: wrap, $justify-content: center);
+    @include desk-s {
+      display: block;
     }
-  }
 
-  .heroLine {
-    position: absolute;
-    top: -21px;
-    right: -41px;
-    width: 497px;
-    height: 100px;
-    fill: #000;
-    @media screen and (max-width: 768px) {
-      top: -11px;
-      right: -31px;
+    &_line {
+      display: none;
+      position: absolute;
+      top: -21px;
+      right: -41px;
+      width: 497px;
+      height: 100px;
+      fill: #000;
+      user-select: none;
+      -webkit-user-drag: none;
+      display: none;
+      @include desk-s {
+        display: block;
+      }
     }
-  }
 
-  .heroText {
-    width: 504px;
-    margin-bottom: 48px;
-    color: rgb(0, 0, 0);
-    font-family: "Oswald";
-    font-size: 86px;
-    font-weight: 600;
-    line-height: 96px;
-    text-transform: uppercase;
-    @media screen and (max-width: 768px) {
-      font-size: 66px;
+    &_text {
+      color: rgb(0, 0, 0);
+      font-family: "Oswald";
+      font-style: "SemiBold";
+      font-weight: 600;
+      text-transform: uppercase;
+      user-select: none;
+      -webkit-user-drag: none;
+      margin-bottom: 14px;
+      font-size: 32px;
+      line-height: 35px;
+      @include tab {
+        margin-bottom: 48px;
+        font-size: 86px;
+        line-height: 96px;
+      }
+    }
+
+    &_buyBtn {
+      position: relative;
+      color: rgb(0, 0, 0);
+      font-family: "Oswald";
+      font-weight: 500;
+      letter-spacing: 0.5px;
+      text-align: center;
+      text-transform: uppercase;
+      background: transparent;
+      cursor: pointer;
+      box-sizing: border-box;
+      user-select: none;
+      -webkit-user-drag: none;
+      border: 2px solid rgb(0, 0, 0);
+      overflow: hidden;
+      transition: color 0.4s ease;
+      z-index: 1;
+      width: 115px;
+      height: 41px;
+      font-size: 14px;
+      line-height: 21px;
+
+      @include tab {
+        height: 56px;
+        width: 175px;
+        font-size: 18px;
+        line-height: 27px;
+      }
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 0%;
+        height: 100%;
+        background: #000;
+        z-index: -1;
+        transition: width 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+      }
+
+      &:hover {
+        color: #fff;
+        &::before {
+          width: 100%;
+        }
+      }
     }
   }
 
   .highlight {
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 2px #000;
-    font-size: 86px;
     font-weight: 600;
-    line-height: 96px;
     font-family: "Oswald";
     text-transform: uppercase;
-    @media screen and (max-width: 768px) {
-      font-size: 66px;
+    font-size: 32px;
+    line-height: 35px;
+    @include tab {
+      font-size: 86px;
+      line-height: 96px;
     }
-  }
-
-  .shopNowBtn {
-    height: 56px;
-    width: 175px;
-    color: rgb(0, 0, 0);
-    font-family: "Oswald";
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 27px;
-    letter-spacing: 0.5px;
-    text-align: center;
-    text-transform: uppercase;
-    background: transparent;
-    cursor: pointer;
-    box-sizing: border-box;
-    border: 2px solid rgb(0, 0, 0);
   }
 
   .controls {
     display: flex;
     position: absolute;
-    right: 0;
-    bottom: 0;
-    gap: 3px;
+    pointer-events: none;
+    width: 100%;
+    bottom: 11px;
+    padding: 0 14px;
+    box-sizing: border-box;
+    justify-content: space-between;
+    right: auto;
+    gap: 0;
+    @include tab {
+      width: auto;
+      right: 0;
+      bottom: 0;
+      padding: 0;
+      gap: 3px;
+      justify-content: flex-start;
+    }
 
     .sliderBtn {
       display: flex;
       justify-content: center;
       align-items: center;
       background: #000;
-      border: none;
-      width: 50px;
-      height: 50px;
+      border: 1px solid #000;
       cursor: pointer;
-    }
+      pointer-events: auto;
+      user-select: none;
+      -webkit-user-drag: none;
+      -webkit-tap-highlight-color: transparent;
+      touch-action: manipulation;
+      transition: all 0.3s ease;
+      width: 41px;
+      height: 41px;
 
-    .btnArrows {
-      width: 15px;
-      height: 15px;
-      fill: rgb(255, 255, 255);
+      @include mob-l {
+        width: 50px;
+        height: 50px;
+      }
+
+      .arrow {
+        display: block;
+        width: 10px;
+        height: 10px;
+        border-top: 2px solid #fff;
+        border-right: 2px solid #fff;
+        transition: border-color 0.3s ease;
+      }
+      .left {
+        transform: rotate(-135deg);
+        margin-left: 4px;
+      }
+      .right {
+        transform: rotate(45deg);
+        margin-right: 4px;
+      }
+
+      @media (hover: hover) {
+        &:hover {
+          background: #fff;
+          .arrow {
+            border-color: #000;
+          }
+        }
+      }
+
+      &:active {
+        transform: scale(0.9);
+        transition: transform 0.1s;
+        background: #fff;
+        .arrow {
+          border-color: #000;
+        }
+      }
     }
   }
 
@@ -130,9 +238,15 @@
     display: flex;
     align-items: center;
     position: absolute;
-    bottom: 28px;
-    left: 22px;
     gap: 8px;
+    left: 50%;
+    bottom: 22px;
+    transform: translate(-50%);
+    @include tab {
+      left: 22px;
+      bottom: 28px;
+      transform: none;
+    }
   }
 
   .dot {
